citrix/http/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citrix-apache
spec:
  selector:
    matchLabels:
      app: citrix-apache
  replicas: 3
  template:
    metadata:
      labels:
        app: citrix-apache
    spec:
      containers:
        - name: citrix-apache
          image: f5devcentral/f5-hello-world:develop
          ports:
            - containerPort: 8080
