citrix/http/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: citrix-apache
spec:
  selector:
    app: citrix-apache
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
